--- a/simulations-html/common/phetcommon/html/prototype-dialog.html
+++ b/simulations-html/common/phetcommon/html/prototype-dialog.html
@@ -1,21 +1,20 @@
 <!-- Used by PrototypeDialog.js, extensively styled in phetcommon.css -->
-<div id="prototype-dialog-overlay">
-    <div id="prototype-dialog-content">
-        <h3 id="prototype-dialog-title"><%= simName %> (prototype)</h3>
+<div id="prototype-dialog" class="dialog-overlay">
+    <div class="dialog">
+        <h3><%= simName %> (prototype)</h3>
 
-        <div id="prototype-dialog-body">
-            <a id="prototype-dialog-logo" href="http://phet.colorado.edu">
+        <div class="body">
+            <a class="logo" href="http://phet.colorado.edu">
                 <!--This template is instantiated in simulation code, so must refer to the correct relative path for common images.-->
                 <img src="../../common/phetcommon/images/phet-logo-120x50.jpg"/>
             </a>
-
-            <div id="prototype-dialog-text">
+            <p>
                 Here at <a href="http://phet.colorado.edu" target="_blank">PhET Interactive Simulations</a>, we are investigating simulations that work in the browser and on tablets.
                 Please be aware that this version is a prototype, and may be inaccurate or incomplete in parts. Enjoy and please contact <a
                     href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
                 if you have trouble running it on any of your browsers or mobile devices.
-            </div>
-            <div class="dialog-buttons">
+            </p>
+            <div class="buttons">
                 <button id="prototype-dialog-ok-button">OK</button>
             </div>
         </div>
