--- a/trunk/simulations-html/experimental/concentration-caat/index.html
+++ b/trunk/simulations-html/experimental/concentration-caat/index.html
@@ -60,7 +60,9 @@
                     href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>
                 if you have trouble running it on any of your browsers or mobile devices.
             </div>
-            <button id="prototype-dialog-ok-button">OK</button>
+            <div class="dialog-buttons">
+                <button id="prototype-dialog-ok-button">OK</button>
+            </div>
         </div>
     </div>
 </div>
@@ -72,7 +74,7 @@
 
 <script type="text/javascript">
     window.onload = function ( e ) {
-        $( '#prototype-dialog-ok-button' ).click( function () {
+        $( '#prototype-dialog-overlay' ).click( function () {
             $( '#prototype-dialog-overlay' ).hide();
         } );
     }
