--- a/trunk/simulations-html/simulations/energy-skate-park/index.html
+++ b/trunk/simulations-html/simulations/energy-skate-park/index.html
@@ -16,11 +16,11 @@
     <script data-main="js/config.js" src="../../contrib/stats-0.0.1.js"></script>
 
     <!--Launch Development Version-->
-    <script data-main="js/config.js" src="../../contrib/require-2.1.2.js"></script>
+    <!--<script data-main="js/config.js" src="../../contrib/require-2.1.2.js"></script>-->
 
     <!--Launch the minified version-->
-    <!--<script src="../../contrib/require-2.1.2.js"></script>-->
-    <!--<script type="text/javascript" src="dist/release/require.js"></script>-->
+    <script src="../../contrib/require-2.1.2.js"></script>
+    <script type="text/javascript" src="dist/release/require.js"></script>
 
     <!--Launch Running Tests, also needs a div-->
     <!--<link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.10.0.css">-->
