--- a/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
+++ b/trunk/simulations-html/common/phetcommon/html/prototype-dialog.html
@@ -1,6 +1,6 @@
 <!-- Used by PrototypeDialog.js, extensively styled in phetcommon.css -->
-<div id="prototype-dialog" class="dialog-overlay">
-    <div class="dialog">
+<div class="dialog-overlay">
+    <div class="prototype-dialog">
         <h3><%= simName %> (prototype)</h3>
 
         <div class="body">
