--- a/trunk/simulations-html/simulations/build-an-atom/build-an-atom.html
+++ b/trunk/simulations-html/simulations/build-an-atom/build-an-atom.html
@@ -17,7 +17,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
 
-    <title>Build an Atom Easel</title>
+    <title>Build an Atom</title>
 
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.css"/>
     <link rel="stylesheet" href="../../common/phetcommon/css/phetcommon.css"/>
