--- a/simulations-html/simulations/build-an-atom/build-an-atom.html
+++ b/simulations-html/simulations/build-an-atom/build-an-atom.html
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="description" content="">
     <meta name="viewport"
-          content="width=960px, height=480px, initial-scale=1.0, maximum-scale=1.0"/>
+          content="width=960, height=480, initial-scale=1.0, maximum-scale=1.0"/>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
 
